# AuditForwarder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  gen_doc.py
config/: agent.yaml  rules.yaml  test.yaml
docs/: ARCHITECTURE.md  OPERATIONS.md  PROJECT_SPEC.md  PROTOCOL.md
include/auditforwarder/: agent.h  build_config.h  chain.h  collector_base.h  config.h  crypto.h  detector.h  event.h  fs.h  logger.h  manager.h  platform_linux.h  platform_windows.h  process.h  processor.h  self_protect.h  thread_pool.h  transport.h  types.h
scripts/: generate_doc.ps1  install_linux.sh  install_windows.ps1
src/: main.cpp
src/collector/: collector_base.cpp
src/collector/linux/: collectors_linux.cpp
src/collector/windows/: collectors_win.cpp
src/common/: config.cpp  config_parser.cpp  event.cpp  fs.cpp  logger.cpp  process.cpp  thread_pool.cpp  types.cpp
src/core/: agent.cpp  daemon_posix.cpp  self_protect.cpp  service_win.cpp
src/crypto/: chain.cpp  crypto.cpp
src/detector/: rule_engine.cpp
src/manager/: manager_server.cpp
src/processor/: processor.cpp
src/transport/: https_transport.cpp
tests/unit/: test_main.cpp
